--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 *.pyc
 local_settings.py
 db.sqlite3
+client_secret.json.aes
+client_secret.json
+excelsheet-381920-4c0c0a0a6e7a.json
 db.sqlite3-journal
 media
 .vscode/
